# astral-filing-cabinet

./: Cargo.toml  README.md
src/: lib.rs  main.rs  settings.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/cli/util/: hash_file.rs  mod.rs
src/filehash/: mod.rs  value.rs
src/remote/: mod.rs
src/tree/: artifact.rs  mod.rs  pointer.rs  walk.rs
src/util/: io.rs  mod.rs  walk.rs
tests/: work-tree-listing.rs
tests/common/: mod.rs  testdir.rs
tests/repos/: empty-git.tar  single-artifact-in-subdir.tar  single-artifact.tar
