[package]
name = "astral-filing-cabinet"
version = "0.1.0"
edition = "2021"

[dependencies]
# basic reporting support
log = "^0.4"

# data and metadata
md-5 = "^0.10"
sha1 = "^0.10"
toml = "^0.5"
bincode = "^1.3"
serde = "^1.0"

# support for tree layouts
relative-path = "^1.7"

# CLI interface support
anyhow = { version="^1", optional=true }
happylog = { git="https://github.com/mdekstrand/happylog.git", optional=true, features=["structopt"] }
indicatif = { version="^0.17", optional=true }
structopt = { version="^0.3", optional=true }

[features]
default = ["cli"]
cli = [
  "structopt",
  "indicatif",
  "happylog",
  "anyhow",
]

[[bin]]
name = "afc"
path = "src/main.rs"
required-features = ["cli"]
