[package]
name = "astral-filing-cabinet"
version = "0.1.0"
edition = "2021"

[dependencies]
# basic reporting support
log = "^0.4"
thiserror = "^1.0"
friendly = "^0.1"

# computational infrastructure
futures = "^0.3.21"
tokio-stream = "^0.1.9"
tokio = { version="^1.0", features=["full"] }

# data and metadata
generic-array = "^0.14"
digest = "^0.10"
md-5 = "^0.10"
sha1 = "^0.10"
sha2 = "^0.10"
hex = { version="^0.4", features=["serde"] }
toml = "^0.5"
bincode = "^1.3"
serde = { version="^1.0", features=["derive"] }

# support for tree layouts
relative-path = { version="^1.7", features=["serde"] }

# CLI interface support
anyhow = { version="^1", optional=true }
happylog = { version="^0.3.0-b2", optional=true, features=["clap"] }
indicatif = { version="^0.17", optional=true }
enum_dispatch = { version="^0.3", optional=true }
clap = { version="^4.0", optional=true }

[dev-dependencies]
rstest = "^0.15"
uuid = { version="^1.1", features=["v4"] }
tar = "^0.4.38"

[features]
default = ["cli"]
cli = [
  "clap",
  "indicatif",
  "happylog",
  "anyhow",
  "enum_dispatch",
]

[[bin]]
name = "afc"
path = "src/main.rs"
required-features = ["cli"]
